# VoxNote

./: .gitignore  CLAUDE.md  Cargo.toml
.claude/: settings.json
.claude/agents/: core-developer.md  security-reviewer.md  server-developer.md  tauri-developer.md  test-engineer.md
crates/voxnote-core/: Cargo.toml
crates/voxnote-core/src/: config.rs  error.rs  lib.rs  pipeline.rs
crates/voxnote-core/src/audio/: accumulator.rs  capture.rs  mod.rs  resample.rs  ringbuf.rs  vad.rs
crates/voxnote-core/src/diarize/: mod.rs  onnx.rs
crates/voxnote-core/src/export/: docx.rs  markdown.rs  mod.rs  pdf.rs
crates/voxnote-core/src/llm/: cloud.rs  local.rs  mod.rs  prompt.rs  templates.rs
crates/voxnote-core/src/model_manager/: disk.rs  downloader.rs  integrity.rs  loader.rs  mod.rs  registry.rs
crates/voxnote-core/src/models/: folder.rs  mod.rs  note.rs  recording.rs  segment.rs
crates/voxnote-core/src/post_processor/: aho_corasick.rs  mod.rs  speaker_tagger.rs  typo_corrector.rs
crates/voxnote-core/src/provider/: fallback.rs  keychain.rs  mod.rs  monitor.rs  registry.rs
crates/voxnote-core/src/rag/: chunker.rs  embedder.rs  mod.rs  pipeline.rs  search.rs
crates/voxnote-core/src/storage/: crypto.rs  migration.rs  mod.rs  sqlite.rs
crates/voxnote-core/src/stt/: cloud.rs  features.rs  mod.rs  qwen_asr.rs  sensevoice.rs  whisper.rs
crates/voxnote-core/src/sync/: client.rs  crdt.rs  encryption.rs  key_exchange.rs  mod.rs
crates/voxnote-core/src/tts/: cloud.rs  mod.rs  onnx.rs
crates/voxnote-core/tests/: e2e_encryption.rs  e2e_export.rs  e2e_pipeline.rs  e2e_provider.rs  e2e_recording_flow.rs  e2e_sync.rs  real_e2e_full_pipeline.rs  real_whisper_inference.rs  tc_aud_audio_pipeline.rs  tc_mdl_model_manager.rs  tc_misc_modules.rs  tc_sec_security.rs  tc_sto_storage.rs
crates/voxnote-server/: Cargo.toml
crates/voxnote-server/src/: db.rs  lib.rs  main.rs
crates/voxnote-server/src/middleware/: auth.rs  rate_limit.rs
crates/voxnote-server/src/routes/: auth.rs  license.rs  mod.rs  models.rs  sync.rs  users.rs
crates/voxnote-server/tests/: e2e_server_flow.rs  tc_srv_routes.rs
crates/voxnote-tauri/: Cargo.toml  tauri.conf.json
crates/voxnote-tauri/capabilities/: default.json
crates/voxnote-tauri/icons/: icon.icns
crates/voxnote-tauri/mobile-plugins/android/src/main/kotlin/: AudioCapturePlugin.kt
crates/voxnote-tauri/mobile-plugins/ios/Sources/: AudioCapturePlugin.swift
crates/voxnote-tauri/src/: lib.rs  main.rs  state.rs
crates/voxnote-tauri/src/commands/: export.rs  llm.rs  mod.rs  model.rs  note.rs  provider.rs  recording.rs  settings.rs
crates/voxnote-tauri/src/plugins/: global_shortcut.rs  mod.rs
crates/voxnote-wasm/: Cargo.toml
crates/voxnote-wasm/src/: lib.rs  wasm_bridge.rs
docs/: SRS.md  SRS_v1.0.md  build-deploy-guide.md
docs/architecture/: 01-system-overview.md  02-core-engine.md  03-data-flow.md  04-cross-platform.md  05-server-architecture.md  06-data-model.md  07-security-architecture.md  08-project-structure.md  generate-diagrams.sh
docs/models/: ASR.md
docs/sketch/: 로컬 AI 회의록 서비스 — 아키텍처 설계 및 구현 방법론.md
docs/test/: VN-TCP-001.md  test-report-template.md  traceability-matrix.md
docs/test/test-cases/: TC-API.md  TC-AUD.md  TC-DIA.md  TC-EXT.md  TC-LLM.md  TC-MDL.md  TC-MOB.md  TC-NFR-EXT.md  TC-NFR-MAINT.md  TC-NFR-PERF.md  TC-NFR-PLAT.md  TC-NFR-REL.md  TC-NFR-SEC.md  TC-NFR-USAB.md  TC-SRV.md  TC-STO.md  TC-STT.md  TC-SYN.md  TC-TTS.md  TC-UI.md
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  styles.css
frontend/src/components/: ErrorBoundary.tsx
frontend/src/components/AskVoxNote/: ChatPanel.tsx
frontend/src/components/Editor/: NoteEditor.tsx  TranscriptView.tsx
frontend/src/components/Export/: ExportDialog.tsx
frontend/src/components/Mobile/: MobileLayout.tsx
frontend/src/components/Recorder/: RecorderBar.tsx
frontend/src/components/Settings/: AccountSettings.tsx  ModelManager.tsx  ProviderSettings.tsx  SettingsPanel.tsx
frontend/src/components/Setup/: ModelRecommendationBanner.tsx  SetupGuideDialog.tsx
frontend/src/components/Sidebar/: NoteList.tsx
frontend/src/components/Summary/: SummaryPanel.tsx
frontend/src/components/Sync/: DevicePairing.tsx  SyncStatus.tsx
frontend/src/components/Toast/: ToastContainer.tsx
frontend/src/hooks/: useTauriIPC.test.ts  useTauriIPC.ts
frontend/src/lib/: types.test.ts  types.ts
frontend/src/stores/: authStore.ts  modelStore.ts  noteStore.test.ts  noteStore.ts  providerStore.ts  recordingStore.test.ts  recordingStore.ts  settingsStore.test.ts  settingsStore.ts  summaryStore.test.ts  summaryStore.ts  syncStore.ts  themeStore.ts  toastStore.ts  viewStore.ts
models/: registry.toml
scripts/: dev.sh  test-all.sh
