[workspace]
resolver = "2"
members = [
    "crates/voxnote-core",
    "crates/voxnote-tauri",
    "crates/voxnote-server",
    "crates/voxnote-wasm",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# 내부 크레이트
voxnote-core = { path = "crates/voxnote-core", default-features = false }

# 오디오
cpal = "0.15"
rubato = "0.14"

# AI/ML
whisper-rs = "0.12"
ort = "2.0.0-rc.12"

# 암호화
chacha20poly1305 = "0.10"
argon2 = "0.5"
secrecy = { version = "0.8", features = ["serde"] }
zeroize = { version = "1", features = ["derive"] }

# 저장소
rusqlite = { version = "0.31", features = ["bundled", "backup"] }

# CRDT / 동기화
yrs = "0.18"
tokio-tungstenite = "0.21"

# 직렬화
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# 비동기 런타임
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# 에러 처리
thiserror = "2"
anyhow = "1"

# 로깅
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP 클라이언트
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }

# 유틸리티
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
crossbeam = "0.8"
sha2 = "0.10"
hex = "0.4"
futures-util = "0.3"
dirs = "6"

# 서버 전용
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls"] }

# Tauri 전용
tauri = "2"
tauri-build = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-shell = "2"

# WASM 전용
wasm-bindgen = "0.2"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"

[profile.dev]
opt-level = 1
