[package]
name = "voxnote-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "VoxNote sync relay server (Axum)"

[dependencies]
voxnote-core = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
