[package]
name = "voxnote-tauri"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "VoxNote desktop/mobile application (Tauri 2)"

[dependencies]
voxnote-core = { workspace = true, features = ["stt", "desktop"] }
tauri = { workspace = true, features = ["tray-icon"] }
tauri-plugin-global-shortcut = { workspace = true }
tauri-plugin-shell = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }

[build-dependencies]
tauri-build = { workspace = true }

[lib]
name = "voxnote_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
